Use software version date, tweak popup text

--- a/app/templates/settings.handlebars
+++ b/app/templates/settings.handlebars
@@ -28,7 +28,7 @@
             {{/sshKey}}
           </p>
           <p>Software Version <span class="subheading"> {{softwareVersion}}</span></p>
-          <p>Date of version update <span class="subheading"> {{softwareVersionUpdateDate}}</span></p>
+          <p>Software Version date <span class="subheading"> {{softwareVersionUpdateDate}}</span></p>
         </div>
 
         <h2>ISP Speeds 
