--- a/app/css/admin-style.css
+++ b/app/css/admin-style.css
@@ -310,6 +310,14 @@ footer img {
   width: 100%;
   height: 11em;
 }
+#cancel-SSH, #submit-SSH {
+  float: right;
+  outline: medium none;
+  background: none repeat scroll 0% 0% #00ADEE;
+  border: 2px solid #00ADEE;
+  color: #FFF;
+  margin-left: 0.8em;
+}
 label {
   margin-right: 1em;
 }
