Formatting tweaks in settings.handlebars

--- a/app/templates/settings.handlebars
+++ b/app/templates/settings.handlebars
@@ -1,5 +1,7 @@
         <h2>Administration
-          <span class="subheading"> <a href="./changePassword.html" class="links">Change admin password</a></span>
+          <span class="subheading">
+            <a href="./changePassword.html" class="links">Change admin password</a>
+          </span>
         </h2>
         <div class="section">
           <p id="SSH">
@@ -34,7 +36,7 @@
           <p>Software Version date <span class="subheading"> {{softwareVersionUpdateDate}}</span></p>
         </div>
 
-        <h2>ISP Speeds 
+        <h2>ISP Speeds
           <span class="subheading">Set these to help optimize your router</span>
         </h2>
         <div class="section">
@@ -82,7 +84,9 @@
             <span class="setting"><span class="editable" id="openwirelessData">{{openwirelessData}}</span> MB
           </span></p>
           <p>Usage counter auto-reset day [Datepicker]<span class="subheading"><a href="#" class="links">Reset usage counter</a></span></p>
-	  <br>
+
+          <br>
+
           <p>
             <label for="openwirelessBand">Frequency Band</label>
             <select class="setting" id="openwirelessBand">OpenwirelessBand</select>
