LK change arrows for upload and download rates to be aligned properly and add horizontal space

--- a/app/templates/dashboard.handlebars
+++ b/app/templates/dashboard.handlebars
@@ -3,10 +3,8 @@
         <img src="{{imageSource}}" alt="router-on" class="icon"/>
 
         <div class="speed">
-            <div class="upload">&#8593;<span
-                    class="upload-speed">{{uploadSpeed}}</span><span> {{uploadSpeedMetric}}</span></div>
-            <div class="download">&#8595;<span
-                    class="download-speed">{{downloadSpeed}}</span><span> {{downloadSpeedMetric}}</span></div>
+            <div class="upload">&#8673; <span class="upload-speed">{{uploadSpeed}}</span><span> {{uploadSpeedMetric}}</span></div>
+            <div class="download">&#8675; <span class="download-speed">{{downloadSpeed}}</span><span> {{downloadSpeedMetric}}</span></div>
         </div>
     </header>
     <div class="title">
