--- a/app/templates/dashboard.handlebars
+++ b/app/templates/dashboard.handlebars
@@ -26,7 +26,7 @@
             </div>
         {{/if}}
         {{#if maxMonthlyBandwidth}}
-            <div class="bandwidth"><span id="monthlyBandwidth">{{monthlyBandwidthUsage}}</span>
+            <div class="data-use"><span id="monthlyBandwidth">{{monthlyBandwidthUsage}}</span>
                 <small>used of</small>
                 {{maxMonthlyBandwidth}}
                 <small> {{maxMonthlyBandwidthMetric}} max <br> per month
