LK & JR - SSID on dashboard page is smaller

--- a/app/templates/dashboard.handlebars
+++ b/app/templates/dashboard.handlebars
@@ -8,7 +8,7 @@
         </div>
     </header>
     <div class="title">
-        <h2>{{name}}{{#if ssid}} ({{ssid}}){{/if}}</h2>
+        <h2>{{name}}{{#if ssid}} <small>({{ssid}})</small>{{/if}}</h2>
         {{#if pingSpeed}}
             <div class="ping">{{pingSpeed}}
             <small> {{pingSpeedMetric}} ping to eff.org
