--- a/app/css/admin-style.css
+++ b/app/css/admin-style.css
@@ -268,6 +268,10 @@ select, .editable {
   font-size: 10px;
 }
 
+h2 small {
+  font-size: .7em;
+}
+
 .status {
   color: rgba(255, 255, 255, 0.6);
 }
