LK fix font sizes for small elements on dashboard

--- a/app/css/admin-style.css
+++ b/app/css/admin-style.css
@@ -264,7 +264,7 @@ select, .editable {
   padding-left: 20px;
 }
 
-.devices small, .ping small, .bandwidth small{
+.devices small, .ping small, .bandwidth small, .data-use small{
   font-size: 10px;
 }
 
