--- a/app/css/admin-style.css
+++ b/app/css/admin-style.css
@@ -205,6 +205,7 @@ select, .editable {
   -webkit-box-flex: 1;
   -webkit-flex-grow: 1;
   -ms-flex-positive: 1;
+  min-height: 320px;
   flex-grow: 1;
 }
 
@@ -221,7 +222,7 @@ select, .editable {
   -webkit-flex-basis: 120px;
   -ms-flex-preferred-size: 120px;
   flex-basis: 120px;
-  padding-right: 20px;
+  padding-right: 10px;
 }
 .network .title {
   -webkit-box-flex: 1;
