JR & LK optimize spacing for iphone 5

--- a/app/templates/dashboard.handlebars
+++ b/app/templates/dashboard.handlebars
@@ -27,9 +27,10 @@
         {{/if}}
         {{#if maxMonthlyBandwidth}}
             <div class="data-use"><span id="monthlyBandwidth">{{monthlyBandwidthUsage}}</span>
-                <small>used of</small>
+                <small> of </small>
                 {{maxMonthlyBandwidth}}
-                <small> {{maxMonthlyBandwidthMetric}} max <br> per month
+                <br>
+                <small> {{maxMonthlyBandwidthMetric}} max
                 </small>
             </div>
         {{/if}}
