Making it so the submit button on the setSSID page grays itself out after the user clicks it, because otherwise the feedback isn't immediate (and the button's current style doesn't change on being clicked down, either)

--- a/app/css/style.css
+++ b/app/css/style.css
@@ -39,6 +39,11 @@ input[type="submit"] {
   margin-top: 1em;
 }
 
+input[type="submit"]:disabled {
+  color: rgba(255,255,255, 0.2);
+  border: 2px solid rgba(255,255,255, 0.2);
+}
+
 a.button {
   background: none;
   line-height: normal;
