--- a/app/templates/settings.handlebars
+++ b/app/templates/settings.handlebars
@@ -83,7 +83,7 @@
             <label for="openwirelessData">Max total data per month</label>
             <span class="setting"><span class="editable" id="openwirelessData">{{openwirelessData}}</span> MB
           </span></p>
-          <p>Usage counter auto-reset day<span class="subheading"><a href="#" class="links">Reset usage counter</a></span></p>
+          <p>Usage counter reset <span class="subheading"><a id="reset-usage" href="#" class="links">Reset usage counter</a></span></p>
 	      <br>
           <p>
             <label for="openwirelessBand">Frequency Band</label>
