--- a/app/css/admin-style.css
+++ b/app/css/admin-style.css
@@ -336,13 +336,18 @@ footer img {
 #enterSshKey {
   display: none;
   padding: 1em;
+  padding-bottom: 0;
+}
+#enterSshKey .controls {
+  margin: 0;
+  padding: 0;
+  text-align: right;
 }
 #input-SSH {
   width: 100%;
   height: 11em;
 }
 #cancel-SSH, #submit-SSH {
-  float: right;
   outline: medium none;
   background: none repeat scroll 0% 0% #00ADEE;
   border: 2px solid #00ADEE;
