--- a/app/templates/settings.handlebars
+++ b/app/templates/settings.handlebars
@@ -27,8 +27,10 @@
                 after which it will be locked to prevent tampering. Further
                 updates can be made via SSH login.
                 <textarea id='input-SSH'>{{contents}}</textarea><br>
-                <button id='submit-SSH'>Submit</button>
-                <button id='cancel-SSH'>Cancel</button>
+                <div class="controls">
+                  <button id='submit-SSH'>Submit</button>
+                  <button id='cancel-SSH'>Cancel</button>
+                </div>
               </div>
             {{/sshKey}}
           </p>
