--- a/app/templates/lastLogin.handlebars
+++ b/app/templates/lastLogin.handlebars
@@ -1,1 +1,1 @@
-<p>Last Login From: {{address}} on {{{datetime timestamp}}}</p>
+<p>Last Login From: <span>{{address}}</span> on <span>{{{datetime timestamp}}}</span></p>
