--- a/app/templates/dashboard.handlebars
+++ b/app/templates/dashboard.handlebars
@@ -25,7 +25,7 @@
                 <small> max <br> bandwidth</small>
             </div>
         {{/if}}
-        {{#if maxMonthlyBandwidth}}
+        {{#if activateDataCap}}
             <div class="data-use"><span id="monthlyBandwidth">{{monthlyBandwidthUsage}}</span>
                 <small> of </small>
                 {{maxMonthlyBandwidth}}
