Fixed format of Software Version date to be same as format used on Dashboard

--- a/app/templates/settings.handlebars
+++ b/app/templates/settings.handlebars
@@ -35,7 +35,7 @@
             {{/sshKey}}
           </p>
           <p>Software Version <span class="setting"> {{softwareVersion}}</span></p>
-          <p>Software Version date <span class="setting"> {{softwareVersionUpdateDate}}</span></p>
+          <p>Software Version date <span class="setting"> {{{datetime softwareVersionUpdateDate}}}</span></p>
         </div>
 
         <h2>ISP Speeds
